--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="p-8"></div>
+    <div id="root" class="p-2 xl:p-8"></div>
     <script src="https://cdn.jsdelivr.net/npm/@dotlottie/player-component@v1.3.0/dist/dotlottie-player.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
