--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/moviesolar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DelFi</title>
+    <title>DelTi</title>
   </head>
   <body>
     <div id="root" class="p-2 xl:p-8"></div>
