--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="en" data-theme="dark" style="scroll-padding-top: 5rem; scroll-behavior: smooth;">
+  <head >
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/moviesolar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
