--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="dark" style="scroll-padding-top: 5rem; scroll-behavior: smooth;">
+<html lang="en" data-theme="black" style="scroll-padding-top: 5rem; scroll-behavior: smooth;">
   <head >
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/moviesolar.svg" />
