--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/moviesolar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DelTi</title>
+    <title>DelFilms >.<</title>
   </head>
   <body>
     <div id="root" class="p-1 xl:p-8"></div>
