--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>DelFilms >.<</title>
   </head>
   <body>
-    <div id="root" class="p-2 xl:py-0 md:px-8"></div>
+    <div id="root" class="p-2 xl:py-0 md:px-8 ">
+      <div class="lines">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>      
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@dotlottie/player-component@v1.3.0/dist/dotlottie-player.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
